--- a/main.css
+++ b/main.css
@@ -3,17 +3,17 @@ body {margin: 0;
 
   span.body {font-kerning: none;font: 13.0px 'helvetica'; color: #ffff}
   span.fagfunk {font: 11.0px 'Helvetica'; font-kerning: none; color: #ffff}
-  span.tittel {font-kerning: none;font: 30.0px 'HELVETICA'; color: #ffff; margin-left: 290px;}
-  span.undertittel {font-kerning: none;font: 10.0px 'HELVETICA'; color: #ffff; position: absolute; top: 120px; left: 100px;}
-  span.kontakt {font-kerning: none;font: 10.0px 'HELVETICA'; color: #ffff; position: absolute; top: 10px; left: 1500px;}
+  span.tittel {font-kerning: none;font: 270.0px 'HELVETICA'; color: #ffff; margin-left: 30%; margin-top: 10px;}
+  span.kontakt {font-kerning: none;font: 12.0px 'HELVETICA'; color: #ffff; position: relative; top: 20px; left: 50%;}
 
   .scroll-left {
-    top: 0px;
+    top: 930px;
     left: 0px;
     height: 50px;
-    width: 1510px;	
+    border: black;
+    width: 1610px;	
     overflow:auto;
-    position: relative;
+    position: absolute;
    }
    .scroll-left p {
     position: absolute;
@@ -54,17 +54,20 @@ body {margin: 0;
     }
    }
 
+
+
+   .reddbarnamedbrødtekst {
+    position: relative;
+    top: 10px;
+    right: 1300px;
+    text-align: right;
+  }
   .enkleremåte {
 position: relative;
 top: 100px;
 left: 500px;
 }
-.reddbarnamedbrødtekst {
-position: absolute;
-top: 542px;
-left: 220px;
-text-align: right;
-}
+
 
 
 .midnattsol {
@@ -82,7 +85,7 @@ text-align: left;
 .image-grid{
     position: absolute;
     margin-top: 450px;
-    margin-left: 150px;
+    margin-left: 10px;
 --gap: 25px;
 --num-cols: 3;
 
