--- a/main.css
+++ b/main.css
@@ -31,38 +31,25 @@ body {margin: 0;
 .meny {
   position: relative;
   top: 0px;
-  left: 25%;
+  left: 5%;
   }
-
-  .showr {
-    position: relative;
-    top: 120px;
-    left: 400px;
-    }
-    .tviledikt {
-      position: relative;
-      top: 90px;
-      left: 400px;
-      }
-
-.image-grid{
-    position: relative;
-    top: 150px;
-    left: 2px;
---gap: 25px;
---num-cols: 3;
-
-box-sizing: border-box;
-padding: var(--gap);
-
-display:grid;
-grid-template-columns: repeat(var(--num-cols), 1fr);
-grid-auto-rows: var(--row-height);
-gap: var(--gap);
-}
-
-.image-grid > img {
-    height: auto;
-    object-fit: cover;
-}
-
+  .video-container {
+    width: 70%; /* Adjust width to fit layout */
+    max-width: 800px; /* Prevents it from getting too wide */
+    margin: 20px auto; /* Centers videos and adds spacing */
+    text-align: center;
+  }
+  
+  .video-container iframe {
+    width: 75%; /* Makes sure all videos have the same width */
+    height: 350px; /* Keeps them the same height */
+    border-radius: 10px; /* Optional: Rounded corners */
+  }
+  
+  .video-description {
+    font-size: 16px;
+    color: #dbdbdb;
+    margin-top: 8px;
+    font: 12.0px 'HELVETICA';
+  }
+  
